fix nav-bar display on mobile

--- a/pages/main.css
+++ b/pages/main.css
@@ -326,7 +326,10 @@ body {
 
 .container .active-modal-layer {
 	display: none;
+	flex-direction: column;
 	justify-content: center;
+	align-items: center;
+	gap: 20px;
 	width: 100%;
 	height: 100vh;
 	top: 0;
@@ -349,7 +352,7 @@ body {
 	background-color: #fff;
     padding: 35px;
     border-radius: 10px;
-    position: absolute;
+    /*position: absolute;*/
     top: 200px;
 }
 
@@ -399,7 +402,6 @@ body {
 	gap: 20px;
 	padding: 30px 20px;
 }
-
 
 .similar .above .pledge-details {
 	display: flex;
@@ -543,6 +545,13 @@ body {
 
 .similar .below .amount-proceed > button:hover {
 	background-color: var(--Dark-cyan);
+}
+
+.container .active-modal-layer .support {
+	height: 150px;
+	width: 65%;
+	background-color: hsla(0, 0%, 0%, 0.65);
+	background-color: darkred;
 }
 
 /*Thank You Styling*/
@@ -720,10 +729,14 @@ body {
 	.container .hero .logo-nav > nav {
 		display: none;
 		position: absolute;
-		top: 67px;
+		top: 85px;
 		left: 3.75%;
 		width: 92.5%;
 		z-index: 1;
+		height: 100vh;
+		background-color: hsla(0, 0%, 0%, 0.30);
+		border-top-left-radius: 10px;
+		border-top-right-radius: 10px;
 	}
 
 	.container .hero .logo-nav > nav > ul {
@@ -732,6 +745,7 @@ body {
 		align-items: unset;
 		background-color: #fff;
 		border-radius: 10px;
+		height: 330px;
 	}
 
 	.container .hero .logo-nav > nav > ul > li {
@@ -745,7 +759,7 @@ body {
 	.container .hero .logo-nav > nav > ul > li > a {
 		color: var(--Black);
 		padding:45px;
-		font-size: 21px;
+		font-size: 26px;
 		font-weight: 700;
 	}
 
@@ -911,8 +925,12 @@ body {
 		margin-right: -25px;
 	}
 
+	.container .hero .logo-nav > nav > ul {
+		height: 300px;
+	}
+
 	.container .hero .logo-nav > nav > ul > li {
-		padding-block: 22.5px;
+		padding-block: 30px;
 	}
 
 	.container .bottom {
@@ -961,11 +979,19 @@ body {
 	}
 
 	.container .hero .logo-nav > nav {
-		top: 42px;
+		top: 55px;
+	}
+
+	.container .hero .logo-nav > nav > ul {
+		height: 260px;
 	}
 
 	.container .hero .logo-nav > nav > ul > li {
-		padding-block: 14px;
+		padding-block: 25px;
+	}
+
+	.container .hero .logo-nav > nav > ul > li > a {
+		font-size: 22px;
 	}
 
 	.container .bottom {
